# shelldbhist

./: .gitignore  .release-please-manifest.json  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  version-sync-guard.yml
docs/: development.md  fzf-release-notes.md  releasing.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sdbh/: CHANGELOG.md  Cargo.toml  dist-workspace.toml
sdbh/src/: cli.rs  db.rs  domain.rs  main.rs  template.rs
sdbh/tests/: integration.rs
