[package]
name = "sdbh"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mgd43b/shelldbhist"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

# The profile that 'dist' will build with
# NOTE: This must live at the *workspace root* Cargo.toml to be honored.
# Kept here for reference; see ../Cargo.toml.
#
# [profile.dist]
# inherits = "release"
# lto = "thin"
