[package]
name = "sdbh"
version = "0.10.0"
edition = "2024"
repository = "https://github.com/mgd43b/shelldbhist"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
# (Optional) used to resolve ~/.sdbh.toml robustly.
dirs = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }
toml = "0.9.10"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"

# The profile that 'dist' will build with
# NOTE: This must live at the *workspace root* Cargo.toml to be honored.
# Kept here for reference; see ../Cargo.toml.
#
# [profile.dist]
# inherits = "release"
# lto = "thin"
